--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "cheerio": "~0.10.8",
+    "cheerio": "^1.0.0-rc.9",
     "uglify-js": "^3.3.16"
   },
   "devDependencies": {
